ingress-nginx-demo.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-demo
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - nginx-demo.paas-lab.docs-planet.site
  rules:
  - host: nginx-demo.paas-lab.docs-planet.site
    http:
      paths:
      - backend:
          serviceName: nginx-demo
          servicePort: 80
