ingress-nginx-external-demo.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-demo-external
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-external
spec:
  tls:
  - hosts:
    - nginx-demo.docs-planet.site
  rules:
  - host: nginx-demo.docs-planet.site
    http:
      paths:
      - backend:
          serviceName: nginx-demo
          servicePort: 80
